# FCH-Toolkit-App

./: .gitignore  BuildProduction.bat  README.md  StartBuildCopy.bat  StartDevElevated.bat  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.base.json  vite.config.js
backend/: invCheck.js
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  debug.rs  lib.rs  main.rs  notes.rs  sound.rs  watcher.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/debug/: debug_log.rs  mod.rs
src-tauri/src/modules/group_auth/: group_access_tokens.rs  mod.rs
src-tauri/src/modules/instance_monitor/: batcher.rs  mod.rs
src-tauri/src/modules/local_db/: localdb.rs
src-tauri/src/modules/log_reader/: event_exporter.rs  log_parser.rs  log_reader.rs  mod.rs
src-tauri/src/modules/settings/: mod.rs  settings.rs
src-tauri/src/modules/sound/: mod.rs  sound.rs
src-tauri/src/modules/updater/: mod.rs  updater.rs
src-tauri/src/modules/world_mod/: mod.rs  world_mod_logs.rs
src/lib/: liveViewReady.ts
src/lib/components/: MediaCard.svelte  PlaceholderSidebar.svelte  Sidebar.svelte  SidebarButton.svelte
src/lib/stores/: apiChecks.ts  debugLog.ts  loading.ts  mediaCache.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/database/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/instance-monitor/: +page.svelte
src/routes/log-explorer/: +page.svelte
src/routes/placeholder/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/world-moderation/: +page.svelte
static/: version.json
tools/: set_version.ps1
