[package]
name = "fchtoolkit"
version = "1.2.1"
description = "Watchlister"
authors = ["Lumine Arashi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fchtoolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
regex = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Media_Audio"] }
winrt-notification = "0.5"
rodio = { version = "0.17", default-features = true, features = ["mp3"] }
rfd = "0.14"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }





