[package]
name = "fchapp"
version = "2.2.1"
description = "FCH App desktop shell"
authors = ["FCH Team"]
edition = "2021"

[lib]
name = "fchapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
lazy_static = "1.4"
regex = "1.10"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.18"
windows = { version = "0.58", features = ["Win32_Media_Audio"] }
tauri-plugin-shell = { version = "2", features = [] }

